--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -1,6 +1,10 @@
 # Settings in the [build] context are global and are applied to
 # all contexts unless otherwise overridden by more specific contexts.
 [build]
+  publish = "build/"
+
+
+  command = "npm run build"
 
 
 
