--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -6,7 +6,10 @@
 
   command = "npm run build"
 
-
+[[redirects]]
+  from = "https://chango666.netlify.app/"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
