--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -11,6 +11,11 @@
   to = "/index.html"
   status = 200
 
+  [[redirects]]
+  from = "https://chango666.netlify.app/"
+  to = "/public/manifest.json"
+  status = 200
+
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
