--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+   // "start": "react-scripts start",
+   // "build": "react-scripts build",
+   // "test": "react-scripts test",
+   // "eject": "react-scripts eject"
+
+    "start":"env-cmd -f ./.env.dev react-scripts start",
+    "build":"env-cmd -f ./.env.dev react-scripts build",
+    "start-prod":"env-cmd -f ./.env.prod react-scripts start",
+    "build-prod":"env-cmd -f ./.env.prod react-scripts build"
+
   },
   "eslintConfig": {
     "extends": [
